testsuite/tests/parser/should_fail/StringInterpolationIncompleteExpr.stderr
StringInterpolationIncompleteExpr.hs:4:26: error: [GHC-58481]
    parse error on input ‘}’

